src/compiler/ast/EParser.java
package compiler.ast;

// $ANTLR 3.5-rc-2 D:\\antlr\\E.g 2014-04-17 22:35:40

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;


@SuppressWarnings("all")
public class EParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "Character_constant", "Comments", 
		"Dec", "Digit", "DigitHex", "FOUR", "GXX_additive_expression", "GXX_and_expression", 
		"GXX_arguments", "GXX_assignment_expression", "GXX_assignment_operator", 
		"GXX_cast_expression", "GXX_character_constant", "GXX_compound_statement", 
		"GXX_constant", "GXX_constant_expression", "GXX_declaration", "GXX_declarator", 
		"GXX_declarators", "GXX_equality_expression", "GXX_exclusive_or_expression", 
		"GXX_expression", "GXX_expression_statement", "GXX_function_definition", 
		"GXX_identifier", "GXX_inclusive_or_expression", "GXX_init_declarator", 
		"GXX_init_declarators", "GXX_initializer", "GXX_integer_constant", "GXX_iteration_statement", 
		"GXX_jump_statement", "GXX_logical_and_expression", "GXX_logical_or_expression", 
		"GXX_multiplicative_expression", "GXX_parameters", "GXX_plain_declaration", 
		"GXX_plain_declarator", "GXX_postfix", "GXX_postfix_expression", "GXX_primary_expression", 
		"GXX_program", "GXX_relational_expression", "GXX_selection_statement", 
		"GXX_shift_expression", "GXX_statement", "GXX_string", "GXX_struct_inner", 
		"GXX_type_name", "GXX_type_specifier", "GXX_unary_expression", "Hex", 
		"ID", "INCLUDE", "Letter", "ONE", "Oct", "String", "THREE", "TWO", "WS", 
		"'!'", "'!='", "'%'", "'%='", "'&&'", "'&'", "'&='", "'('", "')'", "'*'", 
		"'*='", "'+'", "'++'", "'+='", "','", "'-'", "'--'", "'-='", "'->'", "'.'", 
		"'/'", "'/='", "';'", "'<'", "'<<'", "'<<='", "'<='", "'='", "'=='", "'>'", 
		"'>='", "'>>'", "'>>='", "'['", "']'", "'^'", "'^='", "'break'", "'char'", 
		"'continue'", "'else'", "'for'", "'if'", "'int'", "'return'", "'sizeof'", 
		"'struct'", "'union'", "'void'", "'while'", "'{'", "'|'", "'|='", "'||'", 
		"'}'", "'~'"
	};
	public static final int EOF=-1;
	public static final int T__65=65;
	public static final int T__66=66;
	public static final int T__67=67;
	public static final int T__68=68;
	public static final int T__69=69;
	public static final int T__70=70;
	public static final int T__71=71;
	public static final int T__72=72;
	public static final int T__73=73;
	public static final int T__74=74;
	public static final int T__75=75;
	public static final int T__76=76;
	public static final int T__77=77;
	public static final int T__78=78;
	public static final int T__79=79;
	public static final int T__80=80;
	public static final int T__81=81;
	public static final int T__82=82;
	public static final int T__83=83;
	public static final int T__84=84;
	public static final int T__85=85;
	public static final int T__86=86;
	public static final int T__87=87;
	public static final int T__88=88;
	public static final int T__89=89;
	public static final int T__90=90;
	public static final int T__91=91;
	public static final int T__92=92;
	public static final int T__93=93;
	public static final int T__94=94;
	public static final int T__95=95;
	public static final int T__96=96;
	public static final int T__97=97;
	public static final int T__98=98;
	public static final int T__99=99;
	public static final int T__100=100;
	public static final int T__101=101;
	public static final int T__102=102;
	public static final int T__103=103;
	public static final int T__104=104;
	public static final int T__105=105;
	public static final int T__106=106;
	public static final int T__107=107;
	public static final int T__108=108;
	public static final int T__109=109;
	public static final int T__110=110;
	public static final int T__111=111;
	public static final int T__112=112;
	public static final int T__113=113;
	public static final int T__114=114;
	public static final int T__115=115;
	public static final int T__116=116;
	public static final int T__117=117;
	public static final int T__118=118;
	public static final int T__119=119;
	public static final int T__120=120;
	public static final int Character_constant=4;
	public static final int Comments=5;
	public static final int Dec=6;
	public static final int Digit=7;
	public static final int DigitHex=8;
	public static final int FOUR=9;
	public static final int GXX_additive_expression=10;
	public static final int GXX_and_expression=11;
	public static final int GXX_arguments=12;
	public static final int GXX_assignment_expression=13;
	public static final int GXX_assignment_operator=14;
	public static final int GXX_cast_expression=15;
	public static final int GXX_character_constant=16;
	public static final int GXX_compound_statement=17;
	public static final int GXX_constant=18;
	public static final int GXX_constant_expression=19;
	public static final int GXX_declaration=20;
	public static final int GXX_declarator=21;
	public static final int GXX_declarators=22;
	public static final int GXX_equality_expression=23;
	public static final int GXX_exclusive_or_expression=24;
	public static final int GXX_expression=25;
	public static final int GXX_expression_statement=26;
	public static final int GXX_function_definition=27;
	public static final int GXX_identifier=28;
	public static final int GXX_inclusive_or_expression=29;
	public static final int GXX_init_declarator=30;
	public static final int GXX_init_declarators=31;
	public static final int GXX_initializer=32;
	public static final int GXX_integer_constant=33;
	public static final int GXX_iteration_statement=34;
	public static final int GXX_jump_statement=35;
	public static final int GXX_logical_and_expression=36;
	public static final int GXX_logical_or_expression=37;
	public static final int GXX_multiplicative_expression=38;
	public static final int GXX_parameters=39;
	public static final int GXX_plain_declaration=40;
	public static final int GXX_plain_declarator=41;
	public static final int GXX_postfix=42;
	public static final int GXX_postfix_expression=43;
	public static final int GXX_primary_expression=44;
	public static final int GXX_program=45;
	public static final int GXX_relational_expression=46;
	public static final int GXX_selection_statement=47;
	public static final int GXX_shift_expression=48;
	public static final int GXX_statement=49;
	public static final int GXX_string=50;
	public static final int GXX_struct_inner=51;
	public static final int GXX_type_name=52;
	public static final int GXX_type_specifier=53;
	public static final int GXX_unary_expression=54;
	public static final int Hex=55;
	public static final int ID=56;
	public static final int INCLUDE=57;
	public static final int Letter=58;
	public static final int ONE=59;
	public static final int Oct=60;
	public static final int String=61;
	public static final int THREE=62;
	public static final int TWO=63;
	public static final int WS=64;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public EParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public EParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	protected TreeAdaptor adaptor = new CommonTreeAdaptor();

	public void setTreeAdaptor(TreeAdaptor adaptor) {
		this.adaptor = adaptor;
	}
	public TreeAdaptor getTreeAdaptor() {
		return adaptor;
	}
	@Override public String[] getTokenNames() { return EParser.tokenNames; }
	@Override public String getGrammarFileName() { return "D:\\antlr\\E.g"; }


	public static class program_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "program"
	// D:\\antlr\\E.g:62:1: program : a1= program_tmp -> ^( GXX_program $a1) ;
	public final EParser.program_return program() throws RecognitionException {
		EParser.program_return retval = new EParser.program_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		ParserRuleReturnScope a1 =null;

		RewriteRuleSubtreeStream stream_program_tmp=new RewriteRuleSubtreeStream(adaptor,"rule program_tmp");

		try {
			// D:\\antlr\\E.g:62:9: (a1= program_tmp -> ^( GXX_program $a1) )
			// D:\\antlr\\E.g:63:2: a1= program_tmp
			{
			pushFollow(FOLLOW_program_tmp_in_program248);
			a1=program_tmp();
			state._fsp--;
			if (state.failed) return retval;
			if ( state.backtracking==0 ) stream_program_tmp.add(a1.getTree());
			// AST REWRITE
			// elements: a1
			// token labels: 
			// rule labels: retval, a1
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			if ( state.backtracking==0 ) {
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);
			RewriteRuleSubtreeStream stream_a1=new RewriteRuleSubtreeStream(adaptor,"rule a1",a1!=null?a1.getTree():null);

			root_0 = (CommonTree)adaptor.nil();
			// 63:18: -> ^( GXX_program $a1)
			{
				// D:\\antlr\\E.g:63:22: ^( GXX_program $a1)
				{
				CommonTree root_1 = (CommonTree)adaptor.nil();
				root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(GXX_program, "GXX_program"), root_1);
				adaptor.addChild(root_1, stream_a1.nextTree());
				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;
			}

			}

			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException e) {
			throw e;
		}

		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "program"


	public static class program_tmp_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "program_tmp"
	// D:\\antlr\\E.g:66:1: program_tmp : ( declaration | function_definition )+ ;
	public final EParser.program_tmp_return program_tmp() throws RecognitionException {
		EParser.program_tmp_return retval = new EParser.program_tmp_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		ParserRuleReturnScope declaration1 =null;
		ParserRuleReturnScope function_definition2 =null;


		try {
			// D:\\antlr\\E.g:66:13: ( ( declaration | function_definition )+ )
			// D:\\antlr\\E.g:67:2: ( declaration | function_definition )+
			{
			root_0 = (CommonTree)adaptor.nil();


			// D:\\antlr\\E.g:67:2: ( declaration | function_definition )+
			int cnt1=0;
			loop1:
			while (true) {
				int alt1=3;
				switch ( input.LA(1) ) {
				case 113:
					{
					int LA1_2 = input.LA(2);
					if ( (synpred1_E()) ) {
						alt1=1;
					}
					else if ( (synpred2_E()) ) {
						alt1=2;
					}

					}
					break;
				case 103:
					{
					int LA1_3 = input.LA(2);
					if ( (synpred1_E()) ) {
						alt1=1;
					}
					else if ( (synpred2_E()) ) {
						alt1=2;
					}

					}
					break;
				case 108:
					{
					int LA1_4 = input.LA(2);
					if ( (synpred1_E()) ) {
						alt1=1;
					}
					else if ( (synpred2_E()) ) {
						alt1=2;
					}

					}
					break;
				case 111:
				case 112:
					{
					int LA1_5 = input.LA(2);
					if ( (synpred1_E()) ) {
						alt1=1;
					}
					else if ( (synpred2_E()) ) {
						alt1=2;
					}

					}
					break;
				}
				switch (alt1) {
				case 1 :
					// D:\\antlr\\E.g:67:3: declaration
					{
					pushFollow(FOLLOW_declaration_in_program_tmp277);
					declaration1=declaration();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, declaration1.getTree());

					}
					break;
				case 2 :
					// D:\\antlr\\E.g:67:17: function_definition
					{
					pushFollow(FOLLOW_function_definition_in_program_tmp281);
					function_definition2=function_definition();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, function_definition2.getTree());

					}
					break;

				default :
					if ( cnt1 >= 1 ) break loop1;
					if (state.backtracking>0) {state.failed=true; return retval;}
					EarlyExitException eee = new EarlyExitException(1, input);
					throw eee;
				}
				cnt1++;
			}

			}

			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException e) {
			throw e;
		}

		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "program_tmp"


	public static class declaration_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "declaration"
	// D:\\antlr\\E.g:70:1: declaration : a1= type_specifier (a2= init_declarators )? ';' -> ^( GXX_declaration $a1 ( $a2)? ) ;
	public final EParser.declaration_return declaration() throws RecognitionException {
		EParser.declaration_return retval = new EParser.declaration_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token char_literal3=null;
		ParserRuleReturnScope a1 =null;
		ParserRuleReturnScope a2 =null;

		CommonTree char_literal3_tree=null;
		RewriteRuleTokenStream stream_87=new RewriteRuleTokenStream(adaptor,"token 87");
		RewriteRuleSubtreeStream stream_init_declarators=new RewriteRuleSubtreeStream(adaptor,"rule init_declarators");
		RewriteRuleSubtreeStream stream_type_specifier=new RewriteRuleSubtreeStream(adaptor,"rule type_specifier");

		try {
			// D:\\antlr\\E.g:70:13: (a1= type_specifier (a2= init_declarators )? ';' -> ^( GXX_declaration $a1 ( $a2)? ) )
			// D:\\antlr\\E.g:71:2: a1= type_specifier (a2= init_declarators )? ';'
			{
			pushFollow(FOLLOW_type_specifier_in_declaration303);
			a1=type_specifier();
			state._fsp--;
			if (state.failed) return retval;
			if ( state.backtracking==0 ) stream_type_specifier.add(a1.getTree());
			// D:\\antlr\\E.g:71:22: (a2= init_declarators )?
			int alt2=2;
			int LA2_0 = input.LA(1);
			if ( (LA2_0==ID||LA2_0==74) ) {
				alt2=1;
			}
			switch (alt2) {
				case 1 :
					// D:\\antlr\\E.g:71:22: a2= init_declarators
					{
					pushFollow(FOLLOW_init_declarators_in_declaration307);
					a2=init_declarators();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) stream_init_declarators.add(a2.getTree());
					}
					break;

			}

			char_literal3=(Token)match(input,87,FOLLOW_87_in_declaration310); if (state.failed) return retval; 
			if ( state.backtracking==0 ) stream_87.add(char_literal3);

			// AST REWRITE
			// elements: a2, a1
			// token labels: 
			// rule labels: retval, a1, a2
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			if ( state.backtracking==0 ) {
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);
			RewriteRuleSubtreeStream stream_a1=new RewriteRuleSubtreeStream(adaptor,"rule a1",a1!=null?a1.getTree():null);
			RewriteRuleSubtreeStream stream_a2=new RewriteRuleSubtreeStream(adaptor,"rule a2",a2!=null?a2.getTree():null);

			root_0 = (CommonTree)adaptor.nil();
			// 71:46: -> ^( GXX_declaration $a1 ( $a2)? )
			{
				// D:\\antlr\\E.g:71:50: ^( GXX_declaration $a1 ( $a2)? )
				{
				CommonTree root_1 = (CommonTree)adaptor.nil();
				root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(GXX_declaration, "GXX_declaration"), root_1);
				adaptor.addChild(root_1, stream_a1.nextTree());
				// D:\\antlr\\E.g:71:73: ( $a2)?
				if ( stream_a2.hasNext() ) {
					adaptor.addChild(root_1, stream_a2.nextTree());
				}
				stream_a2.reset();

				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;
			}

			}

			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException e) {
			throw e;
		}

		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "declaration"


	public static class function_definition_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "function_definition"
	// D:\\antlr\\E.g:74:1: function_definition : a1= type_specifier a2= plain_declarator '(' (a3= parameters )? ')' a4= compound_statement -> ^( GXX_function_definition $a1 $a2 ( $a3)? $a4) ;
	public final EParser.function_definition_return function_definition() throws RecognitionException {
		EParser.function_definition_return retval = new EParser.function_definition_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token char_literal4=null;
		Token char_literal5=null;
		ParserRuleReturnScope a1 =null;
		ParserRuleReturnScope a2 =null;
		ParserRuleReturnScope a3 =null;
		ParserRuleReturnScope a4 =null;
